adding new style sheets and install menu

--- a/resources/index.html
+++ b/resources/index.html
@@ -11,23 +11,23 @@
 </head>
 <body class="body page-index clearfix">
   <p class="text text-1"><strong>WELCOME HOME</strong></p>
-  <p class="text text-2"><strong>HOSTING SERVICES</strong></p>
-  <div class="element element-1"></div>
-  <p class="text text-3">DOCUMENTS</p>
-  <p class="text text-4"><strong>PHOTOS</strong></p>
-  <p class="text text-5"><strong>URL LIST</strong></p>
-  <p class="text text-6">INSTALL RDP MENU</p>
+  <p onClick="window.location='hosting-services.html';" class="text text-2"><strong>HOSTING SERVICES</strong></p>
+  <div onClick="window.location='hosting-services.html';" class="element element-1"></div>
+  <p onClick="window.location='documents.html';" class="text text-3">DOCUMENTS</p>
+  <p onClick="window.location='photos.html';" class="text text-4"><strong>PHOTOS</strong></p>
+  <p onClick="window.location='url-list.html';" class="text text-5"><strong>URL LIST</strong></p>
+  <p onClick="window.location='rdpinstall.html';" class="text text-6">INSTALL RDP MENU</p>
   <div onClick="window.location='uptime.html';" class="element element-2"></div>
-  <div class="element element-3"></div>
-  <div class="element element-4"></div>
-  <div class="element element-5"></div>
-  <div class="element element-6"></div>
-  <div class="element element-7"></div>
-  <p class="text text-7">RDP MENU</p>
-  <div class="element element-8"></div>
-  <p class="text text-8"><strong>SCRIPT REPO</strong></p>
+  <div onClick="window.location='documents.html';" class="element element-3"></div>
+  <div onClick="window.location='photos.html';" class="element element-4"></div>
+  <div onClick="window.location='scripts.html';" class="element element-5"></div>
+  <div onClick="window.location='url-list.html';" class="element element-6"></div>
+  <div onClick="window.location='rdpinstall.html';" class="element element-7"></div>
+  <p onClick="window.location='rdp-menu.html';" class="text text-7">RDP MENU</p>
+  <div onClick="window.location='rdp-menu.html';" class="element element-8"></div>
+  <p onClick="window.location='scripts.html';" class="text text-8"><strong>SCRIPT REPO</strong></p>
   <p onClick="window.location='uptime.html';" class="text text-9">Monitors</p>
-  <div class="element element-9"></div>
-  <p class="text text-10"><strong>PLAYLISTS</strong></p>
+  <div onClick="window.location='playlists.html';" class="element element-9"></div>
+  <p onClick="window.location='playlists.html';" class="text text-10"><strong>PLAYLISTS</strong></p>
 </body>
 </html>
